Tela de usuário, permissões de acesso~

--- a/src/app/layout/customer/customer.component.html
+++ b/src/app/layout/customer/customer.component.html
@@ -170,7 +170,7 @@
 
                 <div class="col-12 lg:col-9">
                     <div class="p-field">
-                        <label for="email">Telefones</label>
+                        <label for="phoneNumbers">Telefones</label>
                         <p-chips
                             name="phoneNumbers"
                             pTooltip="Aperte ENTER para inserir (max. 2)"
