--- a/src/app/layout/customer/wallet/wallet.component.html
+++ b/src/app/layout/customer/wallet/wallet.component.html
@@ -4,7 +4,7 @@
     <div>
         <h1 class="text-4xl text-center font-semibold">Carteira de Clientes</h1>
     </div>
-    <div class="flex flex-row justify-content-between gap-3" style="height: 49rem;">
+    <div class="flex flex-row justify-content-between gap-3" style="height: 70vh;">
         <div
             *ngFor="let status of [CustomerStatus.NEW, CustomerStatus.CONTACT, CustomerStatus.PRESENTATION, CustomerStatus.PROPOSAL, CustomerStatus.NEGOTIATION]"
             class="border-2 surface-border border-round overflow-auto w-20rem lg:w-30rem flex flex-column gap-2"
